# conceptnet-lite

./: .gitignore  README.md  pyproject.toml  setup.py
conceptnet_lite/: __init__.py  db.py  graphdb_wrapper.py  utils.py
docs/: requirements.txt
docs/source/: conceptnet_lite.rst  conf.py  index.rst  modules.rst
examples/: conceptnet_queries.py  download_and_load_dump_to_db.py  test_concepts.py  test_download_and_unpack_dump.py
testing/: test_sample.py
