[tool.poetry]
name = "conceptnet-lite"
version = "0.1.4"
description = "Python library to work with ConceptNet offline without the need of PostgreSQL"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ldtoolkit/conceptnet-lite"

[tool.poetry.dependencies]
python = "^3.6"
pySmartDL = "^1.3"
pony = "^0.7.10"
langcodes = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
